--- a/index.html
+++ b/index.html
@@ -2,11 +2,54 @@
 <html lang="hu">
 
 <head>
-
+    <meta charset="utf-8">
+    <meta content="width=device-width, initial-scale=1, viewport-fit=cover" name="viewport" />
+    <meta content="A Ferrari történelmének bemutatása röviden" name="description" />
+    <meta content="noindex" name="robots" />
+    <title>A Ferrari rövid történelme</title>
+    <link as="style" href="css/custom.css" rel="preload stylesheet" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+        crossorigin="anonymous"></script>
 </head>
 
 <body>
-
+    <header>
+        <div class="navbar navbar-expand-lg bg-body-tertiary">
+            <nav class="container-fluid">
+                <a class="navbar-brand" href="#">Ferrari</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link active" href="#">Főoldal</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Történelem</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Motorsport</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Jelenlegi modellek</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Galéria</a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+        </div>
+        <section class="container-fluid">
+            <h1>Ferrari</h1>
+            <h2>A Ferrari rövid bemutatója</h2>
+        </section>
+    </header>
 </body>
 
 </html>
